--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,18 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 <artifactId>mybatis-spring</artifactId>
 <version>1.2.1</version>
 </dependency>
+
+<!-- validation -->
+<dependency>
+	<groupId>javax.validation</groupId>
+	<artifactId>validation-api</artifactId>
+	<version>1.1.0.Final</version>
+</dependency>
+<dependency>
+	<groupId>org.hibernate</groupId>
+	<artifactId>hibernate-validator</artifactId>
+	<version>5.0.1.Final</version>
+</dependency>
 </dependencies>
 
 
