--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 	<artifactId>hibernate-validator</artifactId>
 	<version>5.0.1.Final</version>
 </dependency>
+
+<!-- session -->
+<dependency>
+    <groupId>org.springframework.session</groupId>
+    <artifactId>spring-session</artifactId>
+    <version>1.2.0.RELEASE</version>
+</dependency>
 </dependencies>
 
 
